--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath deps.classpath.kotlin
         classpath deps.classpath.gradle
+        classpath deps.classpath.navigation_safe_args
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -87,5 +88,6 @@ dependencies {
     kapt deps.kapt.glide_compiler
 }
 repositories {
-    mavenCentral()
+    google()
+    jcenter()
 }
